--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         </div>
     </footer>
 
-    <script src="../static/js/aboutus.js"> </script>
+    <script src="aboutus.js"> </script>
 </body>
 
 </html>
