--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lingayen Church of Christ</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
 </head>
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-    <script src="../static/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
