--- a/sermons.html
+++ b/sermons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sermon</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -40,6 +40,6 @@
             <p>&copy; 2023 Christian Website. All rights reserved.</p>
         </div>
     </footer>
-    <script src="../static/js/sermons.js"> </script>
+    <script src="sermons.js"> </script>
 </body>
 </html>
