--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
   </head>
   <body>
     <header>
@@ -39,6 +39,6 @@
         <p>&copy; 2023 Christian Website. All rights reserved.</p>
       </div>
     </footer>
-    <script src="contactus.js"> </script>
+    <script src="/static/js/contactus.js"> </script>
   </body>
 </html>
