--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 
 </html>
